--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@ body {
   100% {
     transform: translate(0); } }
 
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px); }
+  100% {
+    transform: translate(0); } }
+
 .header {
   padding: 1rem 0;
   border-bottom: 0.1rem solid #E7E9EB; }
